# specit-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs
tests/: mod.rs
