[package]
name = "specit"
version = "0.1.0"
authors = ["Ryo Ota <nwtgck@nwtgck.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lib-tokio = ["tokio"]
full = ["lib-tokio"]

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
tokio = { version = "0.2", features = ["rt-core", "macros"], optional = true }

[lib]
proc-macro = true
