[package]
name = "specit"
version = "0.1.0"
authors = ["Ryo Ota <nwtgck@nwtgck.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = ["tokio", "async-std"]

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
tokio = { version = "0.2", features = ["rt-core", "macros"], optional = true }
async-std = { version = "1.6", features = ["attributes"], optional = true }

[lib]
proc-macro = true
